--- a/index.html
+++ b/index.html
@@ -1,49 +1,8 @@
 ---
 layout: default
-title: "The high quality, completely customizable, performant and 100% free blog template for Jekyll"
-description: "Chalk uses all the best tools and merges them into one premium blogging theme."
+title: "Your centralized hub for all TSG resources."
 ---
 
-<ul class="article-list">
-  {% for post in paginator.posts %}
-    <li class="article-list-item reveal">
-      <a href="{{ post.url | relative_url }}" title="{{ post.title }}">
-        <h5>
-          {{ post.title }}
-          <span class="icon icon-ios-arrow-thin-right"></span>
-        </h5>
-      </a>
-      <p>{{ post.description }}</p>
-      <div class="article-list-footer">
-        <span class="article-list-date">
-          {{ post.date | date: "%B %-d, %Y" }}
-        </span>
-        <span class="article-list-divider">-</span>
-        <span class="article-list-minutes">
-          {% capture words %}
-            {{ post.content | number_of_words }}
-          {% endcapture %}
-          {% unless words contains "-" %}
-            {{ words | plus: 250 | divided_by: 250 | append: " minute read" }}
-          {% endunless %}
-        </span>
-        <span class="article-list-divider">-</span>
-        <div class="article-list-tags">
-          {% for tag in post.tags %}
-            <a href="{{ 'tag/' | relative_url }}{{ tag }}">{{ tag }}</a>
-          {% endfor %}
-        </div>
-      </div>
-    </li>
-  {% endfor %}
-  {% if paginator.total_pages > 1 %}
-    <li class="article-pagination reveal">
-      {% if paginator.previous_page %}
-        <a href="{{ paginator.previous_page_path }}" class="article-pagination-right">Newer posts <span class="icon icon-ios-arrow-thin-right"></span></a>
-      {% endif %}
-      {% if paginator.next_page %}
-        <a href="{{ paginator.next_page_path }}"><span class="icon icon-ios-arrow-thin-left"></span> Older posts</a>
-      {% endif %}
-    </li>
-  {% endif %}
-</ul>
+<h5><br />
+  Welcome to the Tamriel Guild of Scholars' library of resources. Here you may find anything and everything that our members have created to inform and enhance the rp.
+<br /><br /></h5>
