--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: "Your centralized hub for all TSG resources."
 ---
 
 <h5><br />
-  Welcome to the Tamriel Guild of Scholars' library of resources. Here you may find anything and everything that our members have created to inform and enhance the rp.
+  Welcome to the Tamriel Guild of Scholars library of resources. Here you may find anything and everything that our members have created to inform and enhance the rp.
 <br /><br /></h5>
